Fixed deprecated Gradle calls